--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="panel-main__inner panel-inverted">
                 <div class="panel-main__content">
                     <div class="ih-item circle effect right_to_left">            
-                        <a href="#" title="" class="blog-button">
+                        <a href="https://wanchuan.notion.site/One-Think-9340d26d5f134f6d8363704b9a522e55" title="" class="blog-button">
                             <div class="img"><img src="./img/logo4.png" alt="img" class="js-avatar iUp profilepic"></div>
                             <div class="info iUp">
                                 <div class="info-back">
@@ -50,7 +50,7 @@
                         <img src="./img/logo2.jpg" width="80" alt="Dmego`s logo" class="js-avatar iUp show" />
                     </a> -->
                     <h1 class="panel-cover__title panel-title iUp">
-                        <a href="#" title="OneThink">OneThink</a>
+                        <a href="https://wanchuan.notion.site/One-Think-9340d26d5f134f6d8363704b9a522e55" title="OneThink">OneThink</a>
                     </h1>
                     <p class="panel-cover__subtitle panel-subtitle iUp">Code Create Life</p>
                     <hr class="panel-cover__divider iUp" />
